2002-08-03  Ulrich Drepper  <drepper@redhat.com>

	* assert/assert.c: Use hidden_def not INTDEF.

2002-08-03  Jakub Jelinek  <jakub@redhat.com>

	* include/libc-symbols.h: Optimize if HAVE_BROKEN_ALIAS_ATTRIBUTE is
	not defined.

2002-08-03  Roland McGrath  <roland@redhat.com>

	* include/sys/syslog.h: Use libc_hidden_proto for syslog, vsyslog.
	* include/err.h: Use libc_hidden_proto for warn, warnx, vwarn, vwarn,
	verr, verrx.
	* include/stdlib.h: Use libc_hidden_proto for exit, getenv, bsearch.
	* misc/syslog.c: Add libc_hidden_def.
	* misc/err.c: Likewise.
	* stdlib/exit.c: Likewise.
	* stdlib/bsearch.c: Likewise.
	* sysdeps/generic/getenv.c: Likewise.

	* include/libc-symbols.h (hidden_weak): Define it for [__ASSEMBLER__].

	* sysdeps/unix/make-syscalls.sh: Generate libc_hidden_def or
	libc_hidden_weak for every system call symbol defined.

	* include/time.h: Use libc_hidden_proto for time, asctime, mktime,
	timelocal, localtime, strftime.
	* time/asctime.c: Add libc_hidden_def.
	* time/mktime.c: Likewise.
	* time/localtime.c: Likewise.
	* time/strftime.c: Likewise.
	* time/strptime.c: Likewise.
	* sysdeps/generic/time.c: Likewise.
	* sysdeps/unix/time.c: Likewise.
	* sysdeps/unix/sysv/i386/time.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/time.S: Likewise.

	* include/arpa/inet.h: Use libc_hidden_proto for inet_ntop, inet_pton.
	inet_makeaddr, inet_netof, inet_addr, __inet_addr.
	* resolv/inet_ntop.c: Likewise.
	* resolv/inet_pton.c: Likewise.
	* inet/inet_mkadr.c: Add libc_hidden_def.
	* inet/inet_netof.c: Likewise.
	* resolv/inet_addr.c: Likewise.

	* include/libc-symbols.h: Remove `defined HAVE_BROKEN_ALIAS_ATTRIBUTE'
	clauses from conditionals for now.  Will have to be fixed later
	for older compilers.

	* sysdeps/generic/mempcpy.c (__mempcpy): #undef it before defn.

2002-08-02  Ulrich Drepper  <drepper@redhat.com>

	* configure.in (HAVE_BROKEN_ALIAS_ATTRIBUTE): Add check for
	broken alias attribute handling.