@@ -1,3 +1,9 @@
+2002-08-03  Jakub Jelinek  <jakub@redhat.com>
+	    Ulrich Drepper  <drepper@redhat.com>
+
+	* malloc/malloc.c (public_cALLOc): Only divide if at least one of
+	arguments is big enough to cause an overflow.
+
 2002-08-03  Ulrich Drepper  <drepper@redhat.com>
 
 	* assert/assert.c: Use hidden_def not INTDEF.
